<resources>
    <string name="app_name">Bill Please</string>
    <string name="no_svc">NO SVC</string>
    <string name="svc">SVC</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="discount">Discount(%)</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="split">Split</string>
    <string name="reset">RESET</string>
</resources>